Fixed spinner causing overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,6 @@ body {
     text-align: center;
     min-height: 100vh;
 
-    width: 100vw;
     margin: auto;
 
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
