--- a/src/components/Spinner/styles.scss
+++ b/src/components/Spinner/styles.scss
@@ -4,7 +4,6 @@
     position: absolute;
     display: flex;
     inset: 0;
-    min-width: 80vw;
     border-radius: inherit;
     z-index: 99999999;
 
